--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.3.5",
     "react-fontawesome": "^1.7.1",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.3",
