--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-scroll-horizontal": "^1.6.6",
+    "react-type-animation": "^2.1.2",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
