--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-scroll-horizontal": "^1.6.6",
+    "react-simple-typewriter": "^5.0.1",
     "react-type-animation": "^2.1.2",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
