--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-type-animation": "^2.1.2",
     "redux": "^4.2.0",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
