--- a/package.json
+++ b/package.json
@@ -54,4 +54,12 @@
       "last 1 safari version"
     ]
   }
+  
+  ,
+  "engines": {
+    "npm": ">=8.7.0"
+  },
+  "overrides": {
+    "react": "$react"
+  }
 }
