--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-fontawesome": "^1.7.1",
+    "react-horizontal-scrolling-menu": "^3.2.5",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-scroll-horizontal": "^1.6.6",
     "react-simple-typewriter": "^5.0.1",
     "react-type-animation": "^2.1.2",
     "redux": "^4.2.0",
+    "styled-components": "^5.3.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
